--- a/DS_LinearRegression.ipynb
+++ b/DS_LinearRegression.ipynb
@@ -307,9 +307,277 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3da37dd2",
+   "metadata": {},
+   "source": [
+    "# Multiple Regression Model (population model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "15431f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "\n",
+    "#Load Data\n",
+    "data = pd.read_csv('1.02MultipleLinearRegression.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b4dda3f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>           <td>GPA</td>       <th>  R-squared:         </th> <td>   0.407</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.392</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   27.76</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Sat, 24 Sep 2022</td> <th>  Prob (F-statistic):</th> <td>6.58e-10</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>23:19:38</td>     <th>  Log-Likelihood:    </th> <td>  12.720</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>    84</td>      <th>  AIC:               </th> <td>  -19.44</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>    81</td>      <th>  BIC:               </th> <td>  -12.15</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     2</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>      <td>    0.2960</td> <td>    0.417</td> <td>    0.710</td> <td> 0.480</td> <td>   -0.533</td> <td>    1.125</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>SAT</th>        <td>    0.0017</td> <td>    0.000</td> <td>    7.432</td> <td> 0.000</td> <td>    0.001</td> <td>    0.002</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Rand 1,2,3</th> <td>   -0.0083</td> <td>    0.027</td> <td>   -0.304</td> <td> 0.762</td> <td>   -0.062</td> <td>    0.046</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>12.992</td> <th>  Durbin-Watson:     </th> <td>   0.948</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.002</td> <th>  Jarque-Bera (JB):  </th> <td>  16.364</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.731</td> <th>  Prob(JB):          </th> <td>0.000280</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 4.594</td> <th>  Cond. No.          </th> <td>3.33e+04</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 3.33e+04. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                    GPA   R-squared:                       0.407\n",
+       "Model:                            OLS   Adj. R-squared:                  0.392\n",
+       "Method:                 Least Squares   F-statistic:                     27.76\n",
+       "Date:                Sat, 24 Sep 2022   Prob (F-statistic):           6.58e-10\n",
+       "Time:                        23:19:38   Log-Likelihood:                 12.720\n",
+       "No. Observations:                  84   AIC:                            -19.44\n",
+       "Df Residuals:                      81   BIC:                            -12.15\n",
+       "Df Model:                           2                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const          0.2960      0.417      0.710      0.480      -0.533       1.125\n",
+       "SAT            0.0017      0.000      7.432      0.000       0.001       0.002\n",
+       "Rand 1,2,3    -0.0083      0.027     -0.304      0.762      -0.062       0.046\n",
+       "==============================================================================\n",
+       "Omnibus:                       12.992   Durbin-Watson:                   0.948\n",
+       "Prob(Omnibus):                  0.002   Jarque-Bera (JB):               16.364\n",
+       "Skew:                          -0.731   Prob(JB):                     0.000280\n",
+       "Kurtosis:                       4.594   Cond. No.                     3.33e+04\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 3.33e+04. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = data['GPA']\n",
+    "x1 = data[['SAT','Rand 1,2,3']]\n",
+    "x = sm.add_constant(x1)\n",
+    "results = sm.OLS(y,x).fit()\n",
+    "results.summary()\n",
+    "#variable rand 1,2,3 is not a good predictor, and lessens adj r^2\n",
+    "\n",
+    "#data['categoricalData'] = data['categoricalData'].map({'Yes':1,'No',0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57209301",
+   "metadata": {},
+   "source": [
+    "### F-statistic\n",
+    " - test for overall significance of the model\n",
+    " - null hyp: all betas(coef) are equal to zero\n",
+    " - lower values are closer to non-significant models\n",
+    " - p-value is same. closer to 0 is great\n",
+    " \n",
+    " \n",
+    "# OLS Assumptions\n",
+    " - linearity (all independent variables are multiplied by coefficient, each can be plotted as a line)\n",
+    "      - adjust with non-linear regression, exponential transformation, or log transformation\n",
+    " - no endogenetiy (error cannot be correlated to independent variables) omitted variable bias\n",
+    "      - if present, leads to biased and counterintuitive estimates\n",
+    " - normality of error term distribution (not required to do regrssion, but essential for proper t-test, f-test)\n",
+    "      - given by central limit theorom in large samples\n",
+    " - zero mean, having an intercept fixes problem. Uncommon issues\n",
+    " - homoscedasticity (equal variance) smaller values are Much better predicted than larger ones\n",
+    "      - prevented with ommited variable bias, remove outliers, log transformations(semi-log model)\n",
+    " - no autocorrelation/no serial correlation (errors are assumed to be unrealated) more common with times models\n",
+    "      - detected by looking for patterns when plotting residuals, durban watson test (2 is good more or less is bad)\n",
+    " - no multicollinearity (variables can be used to represent each other, var on same f(x))\n",
+    "      - drop one variable, incorporate them together, keep both vv cautiously. easiest to id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "481d6908",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3.107054\n",
+       "1    3.016107\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data = pd.DataFrame({'const':1,'SAT':[1700,1650],'Attendance':[0,1]})\n",
+    "new_data = new_data[['const','SAT','Attendance']]\n",
+    "\n",
+    "predictions = results.predict(new_data)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dab6fd54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>const</th>\n",
+       "      <th>SAT</th>\n",
+       "      <th>Attendance</th>\n",
+       "      <th>Predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bob</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.107054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alice</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1650</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.016107</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       const   SAT  Attendance  Predictions\n",
+       "Bob        1  1700           0     3.107054\n",
+       "Alice      1  1650           1     3.016107"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictionsdf = pd.DataFrame({'Predictions':predictions})\n",
+    "joined = new_data.join(predictionsdf)\n",
+    "joined.rename(index={0:'Bob',1:'Alice'})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94a288f1",
+   "id": "fc17c81d",
    "metadata": {},
    "outputs": [],
    "source": []
